# market-manager-cpp

./: CMakeLists.txt  README.md  index.html  main.cpp  style.css
include/: Carrinho.h  CarrinhoItem.h  EstoqueData.h  EstoqueService.h  Exceptions.h  Produto.h  ProdutoValidador.h
src/data/: EstoqueData.cpp  EstoqueData.h
src/models/: CarrinhoItem.cpp  Produto.cpp  Produto.h
src/services/: Carrinho.cpp  Carrinho.h  EstoqueService.cpp  EstoqueService.h
src/validator/: ProdutoValidador.cpp
